Add junit dependency

--- a/bank-transfer/pom.xml
+++ b/bank-transfer/pom.xml
@@ -10,5 +10,9 @@
     <artifactId>bank-transfer</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
