--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
                 <version>1.9</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
