--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>19.0</version>
+            </dependency>
 
             <!-- Unit Testing -->
             <dependency>
