add crypto project to auto-loads

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>fizzbuzz</module>
         <module>jg-holidays</module>
         <module>community-video</module>
+        <module>crypto</module>
     </modules>
 
     <properties>
