Calisthenics of Bridge Hand Kata at Codurance https://github.com/Seanseviltwin/BridgeHandKata

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>jg-holidays</module>
         <module>community-video</module>
         <module>crypto</module>
+        <module>codurance-calisthenics</module>
     </modules>
 
     <properties>
